--- a/src/index.html
+++ b/src/index.html
@@ -31,3 +31,9 @@
 <!-- ionic capacitor copy android -->
 <!-- npx cap open android -->
 <!-- ionic capacitor update -->
+
+<!-- npm install cordova-plugin-device -->
+<!-- npm install @awesome-cordova-plugins/device -->
+<!-- ionic cap sync -->
+<!-- https://ionicframework.com/docs/native/device -->
+<!-- npx cap copy && npx cap sync -->
